--- a/BFM/year8.html
+++ b/BFM/year8.html
@@ -1,38 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>BigFanofMaths</title>
+    <title>Year 7</title>
     <link rel="icon" type="image/x-icon" href="browser.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Sansita+One:wght@400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <style>.button {
-        font-family: 'Sansita One', sans-serif;
-        background-color: #78A57E;
-        border: none;
-        color: white;
-        padding: 135px 135px; /* Increased padding for larger buttons */
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 70px; /* Increased font size */
-        margin: 20px; /* Added margin for better spacing */
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-      
-      .button2 {
-        background-color: #78A57E;
-      }
-      
-      .button:hover, .button2:hover {
-        background-color: rgba(79, 109, 90, 1); /* Color when hovered */
-      }
-      </style>
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="jj.css">
 </head>
 <body>
     <div class="topnav">
@@ -64,14 +43,14 @@
         </div>
     </div>
 
-        <h2 class="centered-header">Pick a year group to get started!</h2>
-        <div class="green-line"></div> <!-- Added green line here -->
-        <div class="button-container">
-            <a href="Year7-today.html" class="button">Year 7</a>
-            <a href="year8-today.html" class="button button2">Year 8</a>
-        </div>
-        <div style="height: 100px; background: #FFFDF5;"></div>
-    </div>
+    <h2 class="year-71">Year 8</h2>
+      <div class="green-line"></div> <!-- Added green line here -->
+      <div class="year-container">
+        <a href="year8-today.html" class="yearyear7">Today's Questions</a>
+        <a href="year8-yesterday.html" class="yearyear8">Yesterday's Answers</a>
+      </div>
+
+      <div style="height: 100px; background: #FFFDF5;"></div>
 
     <script>
         function openSidePanel() {
