--- a/BFM/yesterdaysquestions.html
+++ b/BFM/yesterdaysquestions.html
@@ -67,8 +67,8 @@
         <h2 class="centered-header">Pick a year group to get started!</h2>
         <div class="green-line"></div> <!-- Added green line here -->
         <div class="button-container">
-            <a href="Year7-today.html" class="button">Year 7</a>
-            <a href="year8-today.html" class="button button2">Year 8</a>
+            <a href="year7-yesterday.html" class="button">Year 7</a>
+            <a href="year8-yesterday.html" class="button button2">Year 8</a>
         </div>
         <div style="height: 100px; background: #FFFDF5;"></div>
     </div>
