--- a/BFM/homepage.html
+++ b/BFM/homepage.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Sansita+One:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -46,7 +47,7 @@
                 <img src="bfm.png" alt="Logo" width="300" height="300">
             </div>
             <div class="content">
-                <h1 class="main-header">Welcome to BigFanofMaths!</h1>
+                <h1 class="main-header abyssinica-font">Welcome to BigFanofMaths!</h1>
                 <p class="main-paragraph">A free website offering daily maths<br>questions for Year 7 and Year 8 students,<br>with answers provided the next day.</p>
             </div>
         </div>
@@ -72,10 +73,4 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
 
