--- a/BFM/year7.html
+++ b/BFM/year7.html
@@ -20,7 +20,7 @@
             <a href="homepage.html" class="active sansita-font large-italic" style="font-size: 2em;">BigFanofMaths</a>
         </div>
         <div class="topnav-right">
-            <a href="#contact-us">Contact us</a>
+            <a href="contact-us.html">Contact us</a>
             <a href="#about-us">About us</a>
         </div>
     </div>
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <a href="yesterdaysquestions.html" class="dropdown-btn">Yesterday's questions</a>
+            <a href="yesterdaysquestions.html" class="dropdown-btn">Yesterday's answers</a>
             <div class="dropdown-content">
                 <a href="year7-yesterday.html">Year 7</a>
                 <a href="year8-yesterday.html">Year 8</a>
@@ -43,14 +43,17 @@
         </div>
     </div>
 
-    <h2 class="year-71">Year 7</h2>
-      <div class="green-line"></div> <!-- Added green line here -->
-      <div class="year-container">
-        <a href="Year7-today.html" class="yearyear7">Today's Questions</a>
-        <a href="year7-yesterday.html" class="yearyear8">Yesterday's Answers</a>
-      </div>
+    <!-- Wrap the main content in a div with an id of 'mainContent' -->
+    <div id="mainContent">
+        <h2 class="year-71">Year 7</h2>
+        <div class="green-line"></div>
+        <div class="year-container">
+            <a href="Year7-today.html" class="yearyear7">Today's Questions</a>
+            <a href="year7-yesterday.html" class="yearyear8">Yesterday's Answers</a>
+        </div>
 
-      <div style="height: 100px; background: #FFFDF5;"></div>
+        <div style="height: 100px; background: #FFFDF5;"></div>
+    </div>
 
     <script>
         function openSidePanel() {
