--- a/BFM/yesterdaysquestions.html
+++ b/BFM/yesterdaysquestions.html
@@ -41,7 +41,7 @@
             <a href="homepage.html" class="active sansita-font large-italic" style="font-size: 2em;">BigFanofMaths</a>
         </div>
         <div class="topnav-right">
-            <a href="#contact-us">Contact us</a>
+            <a href="contact-us.html">Contact us</a>
             <a href="#about-us">About us</a>
         </div>
     </div>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <a href="yesterdaysquestions.html" class="dropdown-btn">Yesterday's questions</a>
+            <a href="yesterdaysquestions.html" class="dropdown-btn">Yesterday's answers</a>
             <div class="dropdown-content">
                 <a href="year7-yesterday.html">Year 7</a>
                 <a href="year8-yesterday.html">Year 8</a>
