--- a/BFM/contact-us.html
+++ b/BFM/contact-us.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Year 7</title>
+    <title>BigFanofMaths</title>
     <link rel="icon" type="image/x-icon" href="browser.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Sansita+One:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="jj.css">
+    <style>
+        
+        .form-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px; 
+        }
+
+        iframe {
+            max-width: 100%; 
+            border: none; 
+        }
+    </style>
 </head>
 <body>
     <div class="topnav">
@@ -43,15 +55,9 @@
         </div>
     </div>
 
-    <div id="mainContent">
-        <h2 class="year-71">Year 8</h2>
-        <div class="green-line"></div>
-        <div class="year-container">
-            <a href="year8-today.html" class="yearyear7">Today's Questions</a>
-            <a href="year8-yesterday.html" class="yearyear8">Yesterday's Answers</a>
-        </div>
-
-        <div style="height: 100px; background: #FFFDF5;"></div>
+    
+    <div class="form-container">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeuIdQrEVy2x-4gCzE4aiJHSePCnS4H8fk7YX8-H15EnYAp7Q/viewform?embedded=true" width="640" height="854" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 
     <script>
