--- a/Year7-today.html
+++ b/Year7-today.html
@@ -178,7 +178,25 @@
     <div class="text-slideshow">
         <p>Epic Joke of the Day: Why was 6 scared of 7? 7, 8, 9!</p>
         <p>Why do plants hate maths? Because it gives them square roots</p>
+        <p>Why was the equal sign so humble? It knew it wasn’t less than or greater than anyone else.</p>
         <p>Did you know? A 'jiffy' is an actual unit of time.</p>
+        <p>Why don’t you ever talk to pi at a party? Because it just goes on and on.</p>
+        <p>What did the triangle say to the circle? You’re pointless!</p>
+        <p>Why did the student do multiplication problems on the floor? The teacher told him not to use tables.</p>
+        <p>How do you stay warm in any room? Just huddle in the corner — it’s always 90 degrees.</p>
+        <p>Are monsters good at math? Not unless you count Dracula.</p>
+        <p>How does a mathematician plow fields? With a pro-tractor.</p>
+        <p>How do you solve any equation? Multiply both sides by zero.</p>
+        <p>Why did the math book look so sad? It had too many problems.</p>
+        <p>Why did the student wear glasses in math class? Because it helped with di-vision.</p>
+        <p>How do you organize a math party? You "coordinate" it.</p>
+        <p>Why can’t you trust an algebra teacher? Because they’re always plotting something.</p>
+        <p>How do you make one vanish? Add a G — now it’s gone.</p>
+        <p>I used to think math was useless, but then I realized that decimals have a point.</p>
+        <p>What’s a math teacher’s favorite type of tree? Geome-tree</p>
+        <p>Why don’t calculators make good friends? They can be a little too calculating.</p>
+        <p>Why did the obtuse angle always get in trouble? Because it was never right!</p>
+        <p>Not all maths jokes are bad. Only sum...</p>
         <!-- Add 362 more.... -->
     </div>
 </div>
