--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,17 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-06', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgQJcyiEgJ2xhWnQX?embed=1&em=2' },
-                { date: '2024-09-07', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgQPx3SUw8_LFJ-7y?embed=1&em=2' },
-                { date: '2024-09-08', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgS9yZII1AAeFsz5E?embed=1&em=2' },
-                { date: '2024-09-09', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTEILQfuZa-EH3jp?embed=1&em=2' },
-                { date: '2024-09-10', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTNt-EzlGI8mKY9U?embed=1&em=2' },
-                { date: '2024-09-11', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgSdZJfzTCcvR2s93?embed=1&em=2' },
-                { date: '2024-09-12', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgSYfP-z2JaKhgEUg?embed=1&em=2' },
-                { date: '2024-09-13', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgShFP4Tl2Bu80wsY?embed=1&em=2' },
-                { date: '2024-09-14', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgSuETxGrNrUoS3l7?embed=1&em=2' },
                 { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgS0QminO7_OqmUfA?embed=1&em=2' },
-                { date: '2024-09-16', time: '06:59', url: 'n/a' }                       
+                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQE1rAZ135aSYee0cE-0exDAfb9qi1wG5Gz75koHgXeFyc' },
+                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTPNVY-GZRsSKBO2k3UObIDAQpq062iJeSSbZhrQlSDAgs' },
+                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJIsf5rU0kTaoPTJkW_0lAASpHZOsTtJm4lYli6PwKoIg' },
+                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQbSvC7FqdbQaRn5k-IOShmAQf9jW3Xe_vAm2i6RaVF53I' },
+                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSNoqNeqbEKSLYg_k1TznhbAeSpKoyICExjWmrL3_njioA' },
+                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTBFAPT0KFJTbBGf3R5zc-ZAf7oBGKFiX-dC8Swf7w3gdc' },
+                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSA9YaId2PyRLyAupNhw0eYAfXwvq8HL9o4Or-FJ-5A9eE' },
+                { date: '2024-09-23', time: '06:59', url: 'n/a' }                       
               ];
       
               function updateIframeSrc() {
