--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -139,17 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-06', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONfzp4gIartvwR4FA?embed=1&em=2' },
-                { date: '2024-09-07', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgQHABDM9XIN_2sbF?embed=1&em=2' },
-                { date: '2024-09-08', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgQSNOv0wDx-jeazp?embed=1&em=2' },
-                { date: '2024-09-09', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTAcbNeRPK13eiFl?embed=1&em=2' },
-                { date: '2024-09-10', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTKsoNZ34Ph7WV4I?embed=1&em=2' },
-                { date: '2024-09-11', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTQIJh-h4Kukc5ze?embed=1&em=2' },
-                { date: '2024-09-12', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgSUwHG9bNeErA2C5?embed=1&em=2' },
-                { date: '2024-09-13', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgSmUGnZl7XpdMTcB?embed=1&em=2' },
-                { date: '2024-09-14', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgSr-b-QUKex69bWB?embed=1&em=2' },
-                { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgSzpcDeBGBDOtzmn?embed=1&em=2' },
-                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgS4F4bEMBX7rTxxr?embed=1&em=2' }    
+                { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/UQSQsoXhZX3TIICNrAAAAAAAAOlwN4EYEM63Oac' },
+                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/UQSQsoXhZX3TIICNrgAAAAAAAAXhsQwFfutPHGs' },
+                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR2SHkdsmyaRL2-_J-8OJ9LAdy_7TMEG24_0lLt0pOSwss' },
+                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQjaS8jID5RQKRAosf3fCUsAYA3_JSf1vwlk1tAlthVst0' },
+                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRmctuPe7WARrgDaXZe4hpnAZ-cxRDqbTm7zhbw_pukRLo' },
+                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR5JoOyBvpFT5mZtkN52xZxAQ8tehaF28Z1uXhOKZpaUZA' },
+                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTVobFMG3hfRKIBueQApilgASWMj-3PocrcrFG9CPE87T0' },
+                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSZ6XDZNQ7xRYbh6ak9cC8KAeFRsgozeSsN-3GgbdMkpRc' },
+                { date: '2024-09-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSRDTMbsJ2vRa7vTpYs6IZxATAGV7MFYo7mNGM6l9kXt_Y' }                       
               ];
       
 function updateIframeSrc() {
