--- a/year8-today.html
+++ b/year8-today.html
@@ -139,17 +139,15 @@
           <script>
             
               const schedule = [
-                { date: '2024-09-06', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgRRGZYRVOoke7X6L?embed=1&em=2' },
-                { date: '2024-09-07', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgRUFGEX26tpEO43-?embed=1&em=2' },
-                { date: '2024-09-08', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgUCxI_iBLp7aLRVP?embed=1&em=2' },
-                { date: '2024-09-09', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgUFomD4Zg8NnoxFC?embed=1&em=2' },
-                { date: '2024-09-10', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgUT32YNhawuPx7n2?embed=1&em=2' },
-                { date: '2024-09-11', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTbvNuTrsiz5n58l?embed=1&em=2' },
-                { date: '2024-09-12', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTgBxK-OSVWRxAGQ?embed=1&em=2' },
-                { date: '2024-09-13', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTpIjoc7wk7LLCMJ?embed=1&em=2' },
-                { date: '2024-09-14', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTsYyX6ETGsLkBYi?embed=1&em=2' },
                 { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgT5PzwHTWLj86UPz?embed=1&em=2' },
-                { date: '2024-09-16', time: '06:59', url: 'n/a' }     
+                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRFGZcOLGdOQ6mlwMcULOs1ASJCYi_t0nWmyW-2n9QHXMM' },
+                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRvm5yLmL-3QIFXOokSMz0MAQSSGxgy5KzgZdNjO3lZwzo' },
+                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSiXqKJyybiSqq1M24sH9M8ATtv0gcTEY-yopwgekMCshc' },
+                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRCHcgERV4WTag4j9hlg-yiASbsQ3INA-tBy4FmjUUCjUQ' },
+                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTZFf6GVdYTRKNNAGY57cfDAW2K2GDsDZHPebC17UTYo80' },
+                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ4AapTS5yURLysS4GJCNQiAYa6-jkCLbNDvBLkOcIFEp0' },
+                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTOwrDrG2KmS52G8Ii2HxHpAXvY2OmimQ-6DuVVI9g8I5Q' },
+                { date: '2024-09-23', time: '06:59', url: 'n/a' }                       
               ];
       
 function updateIframeSrc() {
