--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -138,21 +138,16 @@
       
           <script>
               // Array of objects with date, time, and corresponding URL
-              const schedule = [
-                { date: '2024-09-03', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgQwH6sRkSqmbiYqU?embed=1&em=2' },
-                { date: '2024-09-04', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgQ8HUPd1Wax4ga7P?embed=1&em=2' },
-                { date: '2024-09-05', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgRH14FI5wImwPQuj?embed=1&em=2' },
-                { date: '2024-09-06', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgRM9OflIjnhn-V6n?embed=1&em=2' },
-                { date: '2024-09-07', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgRYWt9JsaILOHrlV?embed=1&em=2' },
-                { date: '2024-09-08', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgRfAZPPBRPNsGOvu?embed=1&em=2' },
-                { date: '2024-09-09', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgUJgDIvWxP2kIfzA?embed=1&em=2' },
-                { date: '2024-09-10', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgUOLMHa6ja0NS_N5?embed=1&em=2' },
-                { date: '2024-09-11', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTeYr9q-NMX8hwxv?embed=1&em=2' },
-                { date: '2024-09-12', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTXDIaArbpAvSFAy?embed=1&em=' },
-                { date: '2024-09-13', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTk0wNWDqQE87SL3?embed=1&em=2' },
-                { date: '2024-09-14', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgTzU1zz45e07dQUS?embed=1&em=2' }, 
+              const schedule = [ 
                 { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgT3J4XmNYtUesNtc?embed=1&em=2' },
-                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgT-9tRorcEs1hnfG?embed=1&em=2' }    
+                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgT-9tRorcEs1hnfG?embed=1&em=2' },
+                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoArCpIywgTrA_4F99U8koAf_U80OZLdCNaqOnmHk39Po' },
+                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSPXMuvTp1gRbJJh7x8THZdAaBRlGPQL-VssBjE9Qy_zLg' },
+                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTwqx5mBgYDTJN6RMFX---eAYou8hnVthB7P9xza-WHGPs' },
+                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtHTLKm29sR69GnoLBitcJAWqtc7b4oX22iJYKNOwHmuc' },
+                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHsJQurwTySZ-4JZAgejRyATvkX1NJfydgBvA2gOVCRoE' },
+                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRvHePY7lYTQKL2oK87W_dFAWgMknbiX-Rqufj-p3Br1aw' },
+                { date: '2024-09-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQt7xExpxNxSI1or8LM9oHIAXivyCEM3WPQPBDpWUuVzkw' }   
               ];
       
 function updateIframeSrc() {
