--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -147,7 +147,7 @@
                 { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR5JoOyBvpFT5mZtkN52xZxAQ8tehaF28Z1uXhOKZpaUZA' },
                 { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTVobFMG3hfRKIBueQApilgASWMj-3PocrcrFG9CPE87T0' },
                 { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSZ6XDZNQ7xRYbh6ak9cC8KAeFRsgozeSsN-3GgbdMkpRc' },
-                { date: '2024-09-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSRDTMbsJ2vRa7vTpYs6IZxATAGV7MFYo7mNGM6l9kXt_Y' }                       
+                { date: '2024-09-24', time: '06:59', url: 'n/a' }                       
               ];
       
 function updateIframeSrc() {
