--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -147,7 +147,7 @@
                 { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtHTLKm29sR69GnoLBitcJAWqtc7b4oX22iJYKNOwHmuc' },
                 { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHsJQurwTySZ-4JZAgejRyATvkX1NJfydgBvA2gOVCRoE' },
                 { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRvHePY7lYTQKL2oK87W_dFAWgMknbiX-Rqufj-p3Br1aw' },
-                { date: '2024-09-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQt7xExpxNxSI1or8LM9oHIAXivyCEM3WPQPBDpWUuVzkw' }   
+                { date: '2024-09-24', time: '06:59', url: 'n/a' }   
               ];
       
 function updateIframeSrc() {
