--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,15 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgS0QminO7_OqmUfA?embed=1&em=2' },
-                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQE1rAZ135aSYee0cE-0exDAfb9qi1wG5Gz75koHgXeFyc' },
-                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTPNVY-GZRsSKBO2k3UObIDAQpq062iJeSSbZhrQlSDAgs' },
-                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJIsf5rU0kTaoPTJkW_0lAASpHZOsTtJm4lYli6PwKoIg' },
-                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQbSvC7FqdbQaRn5k-IOShmAQf9jW3Xe_vAm2i6RaVF53I' },
-                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSNoqNeqbEKSLYg_k1TznhbAeSpKoyICExjWmrL3_njioA' },
-                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTBFAPT0KFJTbBGf3R5zc-ZAf7oBGKFiX-dC8Swf7w3gdc' },
-                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSA9YaId2PyRLyAupNhw0eYAfXwvq8HL9o4Or-FJ-5A9eE' },
-                { date: '2024-09-24', time: '06:59', url: 'n/a' }                       
+                { date: '2024-09-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSgB1fscfrdTI1jkUUUFpXhAb_XUqROprJLfFYq2Ya0oS8' },
+                { date: '2024-09-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTtJJMLA-uqT6DKRQgm5LxGAQlp5WxSK4zONc_laPfuUBM' },
+                { date: '2024-09-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQSrIMGdFZmRJmVzYIygHZvAZarvMk5SYhbqnufFUTDFUg' },
+                { date: '2024-09-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRLzFxRtDBURKdff0GJMN3mAWAtZQk1_hGfn3F6UAHtOzg' },
+                { date: '2024-09-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTbwSiBeruOTLih2uu6ISFlAaBCmGSTl32LKq_sZT5qTLI' },
+                { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ35gtT3VCHT4OXBV4IdnSJAZ1nsuBmoEUR9Rx4MAu2ttk' },
+                { date: '2024-09-30', time: '06:59', url: 'n/a' },
+                { date: '2024-10-01', time: '06:59', url: 'n/a' },
+                { date: '2024-10-02', time: '06:59', url: 'n/a' }                       
               ];
       
               function updateIframeSrc() {
