--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -139,15 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/UQSQsoXhZX3TIICNrAAAAAAAAOlwN4EYEM63Oac' },
-                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/UQSQsoXhZX3TIICNrgAAAAAAAAXhsQwFfutPHGs' },
-                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR2SHkdsmyaRL2-_J-8OJ9LAdy_7TMEG24_0lLt0pOSwss' },
-                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQjaS8jID5RQKRAosf3fCUsAYA3_JSf1vwlk1tAlthVst0' },
-                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRmctuPe7WARrgDaXZe4hpnAZ-cxRDqbTm7zhbw_pukRLo' },
-                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR5JoOyBvpFT5mZtkN52xZxAQ8tehaF28Z1uXhOKZpaUZA' },
-                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTVobFMG3hfRKIBueQApilgASWMj-3PocrcrFG9CPE87T0' },
-                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSZ6XDZNQ7xRYbh6ak9cC8KAeFRsgozeSsN-3GgbdMkpRc' },
-                { date: '2024-09-24', time: '06:59', url: 'n/a' }                       
+                { date: '2024-09-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxohH1TAbpRaoFez7GyRrAAfN3EvpDWzk7yjOKK-r8cTs' },
+                { date: '2024-09-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRbTxQDVWv_T4SfNreH3SYGAYuPqZB-bwwEwDNQgYXTC8E' },
+                { date: '2024-09-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTxs0-MZi61QrLwk073OR8qAbvcUE1ndyvLrMl-9HpcRrI' },
+                { date: '2024-09-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQGMOK5k16USLiy6BHYTtKtAbp0TlZ2xmDCIATsWxCvCY8' },
+                { date: '2024-09-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSkrV2Mk8J8SoR_Ka48fMQSAUNpIa1vwvc8igT8aJMPduU' },
+                { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR4_-_L-HyzT4IMgQUyb-kyAbtfopVq9ufU9UtDkVMyfvg' },
+                { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQPY3x4W-DUQaWy6O-5EP_AAT_b4zCIEIXdhXsMVvl1veo' },
+                { date: '2024-10-01', time: '06:59', url: 'n/a' },
+                { date: '2024-10-02', time: '06:59', url: 'n/a' }   
               ];
       
 function updateIframeSrc() {
