--- a/year8-today.html
+++ b/year8-today.html
@@ -139,15 +139,15 @@
           <script>
             
               const schedule = [
-                { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgT5PzwHTWLj86UPz?embed=1&em=2' },
-                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRFGZcOLGdOQ6mlwMcULOs1ASJCYi_t0nWmyW-2n9QHXMM' },
-                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRvm5yLmL-3QIFXOokSMz0MAQSSGxgy5KzgZdNjO3lZwzo' },
-                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSiXqKJyybiSqq1M24sH9M8ATtv0gcTEY-yopwgekMCshc' },
-                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRCHcgERV4WTag4j9hlg-yiASbsQ3INA-tBy4FmjUUCjUQ' },
-                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTZFf6GVdYTRKNNAGY57cfDAW2K2GDsDZHPebC17UTYo80' },
-                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ4AapTS5yURLysS4GJCNQiAYa6-jkCLbNDvBLkOcIFEp0' },
-                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTOwrDrG2KmS52G8Ii2HxHpAXvY2OmimQ-6DuVVI9g8I5Q' },
-                { date: '2024-09-24', time: '06:59', url: 'n/a' }                       
+                { date: '2024-09-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQrIjdA6frcT4a1FqU4AmbIASMu_tjdgFqrs7TIReCw8fc' },
+                { date: '2024-09-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRErec-bkSuSa8q59jiic0FAVPw8Oj6C_5g-ENgBGnVQGI' },
+                { date: '2024-09-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ6si3s8r3xTrQikYWASQv_AWfe9SKthrXlJpkhFIyIGGc' },
+                { date: '2024-09-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJHX2fGsgSRaCEvq0qv9_SAYocsa_n67TbQ58ZLpUwQsI' },
+                { date: '2024-09-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRnkxjjQrhQRJbqF8EqqfhqAYtC4ZVZt09SUELhzlQ3lA0' },
+                { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQooUBA-g_RrYsrfahqyDpAU6Pc6v5a8M-huLZ4336IkM' },
+                { date: '2024-09-30', time: '06:59', url: 'n/a' },
+                { date: '2024-10-01', time: '06:59', url: 'n/a' },
+                { date: '2024-10-02', time: '06:59', url: 'n/a' }                      
               ];
       
 function updateIframeSrc() {
