--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -139,15 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [ 
-                { date: '2024-09-15', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgT3J4XmNYtUesNtc?embed=1&em=2' },
-                { date: '2024-09-16', time: '06:59', url: 'https://1drv.ms/p/s!ApCyheFlfdONgT-9tRorcEs1hnfG?embed=1&em=2' },
-                { date: '2024-09-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoArCpIywgTrA_4F99U8koAf_U80OZLdCNaqOnmHk39Po' },
-                { date: '2024-09-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSPXMuvTp1gRbJJh7x8THZdAaBRlGPQL-VssBjE9Qy_zLg' },
-                { date: '2024-09-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTwqx5mBgYDTJN6RMFX---eAYou8hnVthB7P9xza-WHGPs' },
-                { date: '2024-09-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtHTLKm29sR69GnoLBitcJAWqtc7b4oX22iJYKNOwHmuc' },
-                { date: '2024-09-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHsJQurwTySZ-4JZAgejRyATvkX1NJfydgBvA2gOVCRoE' },
-                { date: '2024-09-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRvHePY7lYTQKL2oK87W_dFAWgMknbiX-Rqufj-p3Br1aw' },
-                { date: '2024-09-24', time: '06:59', url: 'n/a' }   
+                { date: '2024-09-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQay8RdGoQ9QIaBNsVXMv-gATv6nVa5S0CFzwka2xLlbmk' },
+                { date: '2024-09-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS2EV4hADU4QJ6klLx_OdpvAf688AmDCvmLHrh1G0BdoY4' },
+                { date: '2024-09-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQUfJhQxvJwRL1TxRa_e1GOATg635hTqitPzCdacn0ntSE' },
+                { date: '2024-09-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdT_7XZWvdTac5m1sADJ9FAdSpcEkIEKcLCZLYpuozm1Q' },
+                { date: '2024-09-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT96dNOlUb8R4CcdSNk74fYAeFBRiLRECDBPkRmMNrM1hA' },
+                { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS_AZOCwB3MT7KM5sQV3akFAZCZMqNxmObgaJQQeozTpVY' },
+                { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSpVvMCuW8cRb3U-gnr8ttPAYF-L7E0du1o8S2QISysqsQ' },
+                { date: '2024-10-01', time: '06:59', url: 'n/a' },
+                { date: '2024-10-02', time: '06:59', url: 'n/a' }      
               ];
       
 function updateIframeSrc() {
