--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,15 +139,17 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSgB1fscfrdTI1jkUUUFpXhAb_XUqROprJLfFYq2Ya0oS8' },
-                { date: '2024-09-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTtJJMLA-uqT6DKRQgm5LxGAQlp5WxSK4zONc_laPfuUBM' },
-                { date: '2024-09-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQSrIMGdFZmRJmVzYIygHZvAZarvMk5SYhbqnufFUTDFUg' },
-                { date: '2024-09-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRLzFxRtDBURKdff0GJMN3mAWAtZQk1_hGfn3F6UAHtOzg' },
-                { date: '2024-09-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTbwSiBeruOTLih2uu6ISFlAaBCmGSTl32LKq_sZT5qTLI' },
                 { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ35gtT3VCHT4OXBV4IdnSJAZ1nsuBmoEUR9Rx4MAu2ttk' },
-                { date: '2024-09-30', time: '06:59', url: 'n/a' },
-                { date: '2024-10-01', time: '06:59', url: 'n/a' },
-                { date: '2024-10-02', time: '06:59', url: 'n/a' }                       
+                { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSFQRBjVX6ZR6Wh1EO2X6MdAc5u_CAdrvQ9AKA6hkszTsk' },
+                { date: '2024-10-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRS6S17na6RrF6WKFXHyWDAaGTTrboXClI2JP7akObL0M' },
+                { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQF6tjm4vX6ToFt-oJRPtpKAVv4NxNxD2tybew7GBirSsw' },
+                { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTKpc1ei3ALTrANj7hi22BrAXrwhVplEBeE_35WMZ92eQ0' },
+                { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQThASRbp00nSaofqGzBbwlSAchHK0UgdngCjharxZ0LVO4' },
+                { date: '2024-10-05', time: '06:59', url: 'n/a' },
+                { date: '2024-10-06', time: '06:59', url: 'https://qTLI' },
+                { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
+                { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
+                { date: '2024-10-09', time: '06:59', url: 'n/a' }                       
               ];
       
               function updateIframeSrc() {
