--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -139,15 +139,17 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxohH1TAbpRaoFez7GyRrAAfN3EvpDWzk7yjOKK-r8cTs' },
-                { date: '2024-09-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRbTxQDVWv_T4SfNreH3SYGAYuPqZB-bwwEwDNQgYXTC8E' },
-                { date: '2024-09-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTxs0-MZi61QrLwk073OR8qAbvcUE1ndyvLrMl-9HpcRrI' },
-                { date: '2024-09-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQGMOK5k16USLiy6BHYTtKtAbp0TlZ2xmDCIATsWxCvCY8' },
-                { date: '2024-09-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSkrV2Mk8J8SoR_Ka48fMQSAUNpIa1vwvc8igT8aJMPduU' },
                 { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR4_-_L-HyzT4IMgQUyb-kyAbtfopVq9ufU9UtDkVMyfvg' },
                 { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQPY3x4W-DUQaWy6O-5EP_AAT_b4zCIEIXdhXsMVvl1veo' },
-                { date: '2024-10-01', time: '06:59', url: 'n/a' },
-                { date: '2024-10-02', time: '06:59', url: 'n/a' }   
+                { date: '2024-10-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYBkecfXqSQ5XYIE3m0YYYAWBFhx5y8HShzKCOjrjNyeY' },
+                { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSG3YGloPcmRru7jmMdOMFJAbFuJgMFoiEe9vXlpFZiKmc' },
+                { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS-CJMmYhGJR4JBWVStKJx4AZImWwAQfGEy0g4TrrdUXrk' },
+                { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRr42UeL6epT4H2f0TOB3bOAbdkxgbKhev4o8qNCQ3QZbY' },
+                { date: '2024-10-05', time: '06:59', url: 'n/a' },
+                { date: '2024-10-06', time: '06:59', url: 'https://qTLI' },
+                { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
+                { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
+                { date: '2024-10-09', time: '06:59', url: 'n/a' }      
               ];
       
 function updateIframeSrc() {
