--- a/year8-today.html
+++ b/year8-today.html
@@ -140,7 +140,7 @@
             
               const schedule = [
                 { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTQooUBA-g_RrYsrfahqyDpAU6Pc6v5a8M-huLZ4336IkM' },
-                { date: '2024-09-30', time: '06:59', url: 'n/a' },
+                { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRbvppAipmxSKo0SdIqr37jAbC1Zm12vb9mo1lnDJPlUTs' },
                 { date: '2024-10-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSISLGDBXbvSppugVcm8XnuAbU-zjJ8WGSG3hH8SoQHSJM' },
                 { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQTjykasoTnRrbXiUcu_MKnAaroNxnZyoCZRrwuWMRPRNg' },
                 { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSv6-8dLm3vQaqv6u5d6Jx5AbkJZYB9ptSA1gNr7mctdng' },
