--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -139,15 +139,17 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [ 
-                { date: '2024-09-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQay8RdGoQ9QIaBNsVXMv-gATv6nVa5S0CFzwka2xLlbmk' },
-                { date: '2024-09-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS2EV4hADU4QJ6klLx_OdpvAf688AmDCvmLHrh1G0BdoY4' },
-                { date: '2024-09-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQUfJhQxvJwRL1TxRa_e1GOATg635hTqitPzCdacn0ntSE' },
-                { date: '2024-09-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTdT_7XZWvdTac5m1sADJ9FAdSpcEkIEKcLCZLYpuozm1Q' },
-                { date: '2024-09-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT96dNOlUb8R4CcdSNk74fYAeFBRiLRECDBPkRmMNrM1hA' },
                 { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS_AZOCwB3MT7KM5sQV3akFAZCZMqNxmObgaJQQeozTpVY' },
                 { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSpVvMCuW8cRb3U-gnr8ttPAYF-L7E0du1o8S2QISysqsQ' },
-                { date: '2024-10-01', time: '06:59', url: 'n/a' },
-                { date: '2024-10-02', time: '06:59', url: 'n/a' }      
+                { date: '2024-10-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWRkuGt78ZQpxh_4oEysENAW1360_qj8OqQ6db46Q_0lc' },
+                { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXg-XM1FG-T40IsmkYLgqFAV_EC-eYY9UVt3Ts70joT5w' },
+                { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ-wwAvzkZVTLpfMgOg74UHAcu8ofVy-084dgLKpdCCEog' },
+                { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSziaJgLHErRroW9IjHonfdAcL9-GndAUu217LO4TMbjpY' },
+                { date: '2024-10-05', time: '06:59', url: 'n/a' },
+                { date: '2024-10-06', time: '06:59', url: 'https://qTLI' },
+                { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
+                { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
+                { date: '2024-10-09', time: '06:59', url: 'n/a' }         
               ];
       
 function updateIframeSrc() {
