--- a/year8-today.html
+++ b/year8-today.html
@@ -145,8 +145,8 @@
                 { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQTjykasoTnRrbXiUcu_MKnAaroNxnZyoCZRrwuWMRPRNg' },
                 { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSv6-8dLm3vQaqv6u5d6Jx5AbkJZYB9ptSA1gNr7mctdng' },
                 { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRihmLQ33MSL6pwKGJHVbjARY-adHw3P_2CgzO66VOoYg' },
-                { date: '2024-10-05', time: '06:59', url: 'n/a' },
-                { date: '2024-10-06', time: '06:59', url: 'https://qTLI' },
+                { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTTgTxy1GzWRJWJ_vu-5q06AesOILz6dcLxLZISMH_lg5Q' },
+                { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSnkdb7hHiXQrYgzSjkghoSAVFgjxJe07x1cIqjBzhDNaI' },
                 { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
                 { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
                 { date: '2024-10-09', time: '06:59', url: 'n/a' }      
