--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -145,8 +145,8 @@
                 { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXg-XM1FG-T40IsmkYLgqFAV_EC-eYY9UVt3Ts70joT5w' },
                 { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ-wwAvzkZVTLpfMgOg74UHAcu8ofVy-084dgLKpdCCEog' },
                 { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSziaJgLHErRroW9IjHonfdAcL9-GndAUu217LO4TMbjpY' },
-                { date: '2024-10-05', time: '06:59', url: 'n/a' },
-                { date: '2024-10-06', time: '06:59', url: 'https://qTLI' },
+                { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ7-7tK17RSRYpVfrfueFLVAYIJoKyeLmYu6CHOxMi4W-Y' },
+                { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS2XGxJQYPPS6dGWXoXNPjuAZsIP-IitOe7617S3UYUo6o' },
                 { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
                 { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
                 { date: '2024-10-09', time: '06:59', url: 'n/a' }         
