--- a/Year7-today.html
+++ b/Year7-today.html
@@ -147,7 +147,7 @@
                 { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQThASRbp00nSaofqGzBbwlSAchHK0UgdngCjharxZ0LVO4' },
                 { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR63JUTVQD8TJdnkDqaCU8zAeVHOVT8I1G5cxyjlFzLo0c' },
                 { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQY0_jp_Ko2T7cyDnSoWC5BAVpxoq48DaKIM52ee4jBaiQ' },
-                { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
+                { date: '2024-10-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHO2j1y9BbT4ESvQY21-LjAfa70l1lci4T_0D1GXfFt-Y' },
                 { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
                 { date: '2024-10-09', time: '06:59', url: 'n/a' }                       
               ];
