--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -147,7 +147,7 @@
                 { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRr42UeL6epT4H2f0TOB3bOAbdkxgbKhev4o8qNCQ3QZbY' },
                 { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRau3wQDdcaRJ4bnkDqMAysAYHZY6_oenoJvkEs-SktyEQ' },
                 { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQW22H3mwVbSKm4jco7cKyRAaEJ7yhUqUasthYFvORuCaE' },
-                { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
+                { date: '2024-10-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtKTcq2V7HQ6Nq5sOb4Xf-ASK79FuYYY7GMKQSnuhgtkY' },
                 { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
                 { date: '2024-10-09', time: '06:59', url: 'n/a' }      
               ];
