--- a/year8-today.html
+++ b/year8-today.html
@@ -147,7 +147,7 @@
                 { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRihmLQ33MSL6pwKGJHVbjARY-adHw3P_2CgzO66VOoYg' },
                 { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTTgTxy1GzWRJWJ_vu-5q06AesOILz6dcLxLZISMH_lg5Q' },
                 { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSnkdb7hHiXQrYgzSjkghoSAVFgjxJe07x1cIqjBzhDNaI' },
-                { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
+                { date: '2024-10-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRheL8tjH-zSZL1o8qBXrD5AZNUqcv-9fH8v_NN3ICasG4' },
                 { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
                 { date: '2024-10-09', time: '06:59', url: 'n/a' }      
                    
