--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -147,7 +147,7 @@
                 { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSziaJgLHErRroW9IjHonfdAcL9-GndAUu217LO4TMbjpY' },
                 { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ7-7tK17RSRYpVfrfueFLVAYIJoKyeLmYu6CHOxMi4W-Y' },
                 { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS2XGxJQYPPS6dGWXoXNPjuAZsIP-IitOe7617S3UYUo6o' },
-                { date: '2024-10-07', time: '06:59', url: 'https://x4MAu2ttk' },
+                { date: '2024-10-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQMbRqmz-BEQZHfhZmclCbgATKWZK58ATr9_oDYuK5Opgc' },
                 { date: '2024-10-08', time: '06:59', url: 'https://16hkszTsk' },
                 { date: '2024-10-09', time: '06:59', url: 'n/a' }         
               ];
